Did all link-related API changes. Introduced the /assignInstance endpoint. Extended /matchingInstance and /matchingResult with parameter 'Id' to pass the id of the calling instance. Changed specification, server and request handler accordingly. No db changes yet.
